# ai-portfolio-manager

./: .env.example  .gitignore  AI_PORTFOLIO_MANAGER_DESIGN.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
frontend/: package.json
frontend/app/: layout.tsx
frontend/app/analytics/: page.tsx
frontend/app/api/copilotkit/: route.ts
frontend/app/cases/[id]/: page.tsx
frontend/app/intake/: layout.tsx  page.tsx
frontend/app/pipeline/: page.tsx
frontend/app/portfolio/: page.tsx
frontend/components/: BusinessCaseViewer.tsx  ChatPanel.tsx  KanbanBoard.tsx  Navigation.tsx  PortfolioMatrix.tsx  ScoreRadar.tsx
frontend/lib/: api.ts
frontend/types/: index.ts
infra/: deploy.sh
infra/terraform/: main.tf  outputs.tf  providers.tf  terraform.tfvars.example  variables.tf
prompts/: business_case_critic.md  business_case_writer.md  cost_evaluator.md  feasibility_evaluator.md  intake_system.md  security_evaluator.md  value_evaluator.md
src/agents/: business_case.py  evaluation_graph.py  intake.py  llm.py  state.py
src/agents/evaluators/: base.py  cost.py  feasibility.py  security.py  value.py
src/api/: main.py
src/api/routes/: analytics.py  business_cases.py  evaluations.py  use_cases.py
src/config/: settings.py
src/db/: connection.py  models.py  seeds.py
src/db/migrations/: env.py
src/db/migrations/versions/: 136395ba8309_initial_schema.py
src/scoring/: engine.py  ranking.py
src/tenancy/: middleware.py
tests/: conftest.py
tests/prompt_tests/: README.md  scenario_1_customer_churn.md  scenario_2_document_classification.md  scenario_3_fraud_detection.md  scenario_4_edge_case_vague.md  scenario_5_verbose.md
tests/unit/: test_use_cases.py
