[project]
name = "ai-portfolio-manager"
version = "0.1.0"
description = "Multi-tenant AI use case portfolio manager on Azure AI Foundry"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.12",
    # LangGraph & LangChain
    "langgraph>=1.0.0",
    "langgraph-checkpoint-postgres>=3.0.0",
    "langchain-openai>=0.3.0",
    "langchain-core>=1.0.0",
    # AG-UI / CopilotKit
    "ag-ui-langgraph>=0.0.28",
    "copilotkit>=0.1.0",
    # Database
    "psycopg[binary]>=3.2.0",
    "psycopg-pool>=3.2.0",
    "alembic>=1.14.0",
    "sqlalchemy>=2.0.0",
    # Azure
    "azure-search-documents>=11.6.0",
    "azure-identity>=1.19.0",
    # Auth
    "pyjwt[crypto]>=2.9.0",
    # Config
    "pydantic-settings>=2.6.0",
    # Observability
    "opentelemetry-api>=1.28.0",
    "opentelemetry-sdk>=1.28.0",
    "opentelemetry-instrumentation-fastapi>=0.49b0",
    "opentelemetry-exporter-otlp>=1.28.0",
    # Voice (Sprint 6)
    # "elevenlabs>=1.0.0",
    "greenlet>=3.3.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "TCH"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
